--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,33 @@
-Source: template-repository
-Section: unknown
+Source: golang-github-evanphx-json-patch
+Maintainer: Debian Go Packaging Team <team+pkg-go@tracker.debian.org>
+Uploaders:
+ Arnaud Rebillout <arnaud.rebillout@collabora.com>,
+ Dmitry Smirnov <onlyjob@debian.org>,
+ Tim Potter <tpot@hpe.com>,
+Section: devel
+Testsuite: autopkgtest-pkg-go
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Build-Depends:
+ debhelper-compat (= 12),
+ dh-golang,
+Build-Depends-Indep:
+ golang-any,
+ golang-github-pkg-errors-dev,
+Standards-Version: 4.5.1
+Vcs-Browser: https://salsa.debian.org/go-team/packages/golang-github-evanphx-json-patch
+Vcs-Git: https://salsa.debian.org/go-team/packages/golang-github-evanphx-json-patch.git
+Homepage: https://github.com/evanphx/json-patch
+Rules-Requires-Root: no
+XS-Go-Import-Path: github.com/evanphx/json-patch
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: golang-github-evanphx-json-patch-dev
+Architecture: all
+Depends:
+ ${misc:Depends},
+ golang-github-pkg-errors-dev,
+Multi-Arch: foreign
+Description: Go library to apply RFC6902 patches and create and apply RFC7386 patches
+ JSON-Patch is a library which provides functionality for both
+ applying RFC6902 JSON patches (http://tools.ietf.org/html/rfc6902)
+ against documents, as well as for calculating & applying RFC7396
+ JSON merge patches (https://tools.ietf.org/html/rfc7396).
